# ai-infra-monitor

./: .gitignore  README.md  check_processes.py  comandos.md  debug_routes.py  requirements.txt  test_db.py  test_process_collection.py  test_process_format.py
agent/: README.md  __main__.py  collector.py  pyproject.toml  run.py  sender.py
agent/tests/: test_buffer_flush_by_size.py  test_buffer_flush_by_timeout.py  test_cli.py  test_send_batch.py
backend/: README.md  pyproject.toml  run-dev.ps1
backend/api/models/: disk_analyzer.py  ingest.py
backend/api/routes/: alerts.py  analyze.py  dashboard.py  disk_analyzer.py  hosts.py  ingest.py  metrics.py  processes.py
backend/app/: llm_adapter.py  main.py
backend/db/: README.md  schema.sql
backend/disk_analyzer/: __init__.py  cleaner.py  rules.py  scanner.py
backend/scripts/: add_process_metrics_table.py  check_alerts.py  check_db_metrics.py  check_process_data.py  check_raw_batches.py  cleanup_data.py  force_high_cpu_alert.py  init_db.py  insert_synthetic_data.py  migrate_disk_analyzer.py  register_host.py  test_disk_analyzer.py  test_ingest.py  test_process_monitoring.py  update_schema_sprint4.py
backend/tests/: test_analysis_worker.py  test_cleanup.py  test_health.py  test_ingest_endpoint.py  test_llm_adapter.py  test_notifications.py  test_schema.py  test_worker_process.py  test_worker_rules.py
backend/worker/: __init__.py  analysis_worker.py  notifications.py  rules.py  run_worker.py  worker.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  (+3 more)
docs/: DISK_ANALYZER.md  DISK_ANALYZER_IMPLEMENTATION.md
examples/: sample.json
(+12 files in other folders)
