[project]
name = "ai-infra-monitor-agent"
version = "0.1.0"
description = "Local agent for AI Infra Monitor"
authors = [
    {name = "Edgardo Rodriguez"},
]
dependencies = [
    "requests",
    "typer",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
